--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,22 +1,58 @@
 @charset "UTF-8";
 
 body {
-    background-color: #F6F8FF;
-    min-height: 100vh;
+  background-color: #F6F8FF;
+  min-height: 100vh;
 }
 
 *, *:after, *:before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 @media (min-width: 1024px) {
-    html {
-        font-size: 16px;
-    }
+  html {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 240px) and (max-width: 1023px) {
-    html {
-        font-size: 14px;
-    }
+  html {
+    font-size: 14px;
+  }
+}
+
+body {
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+figure {
+  margin: 0 0 20px 0;
+  padding: 0;
+  text-align: center;
+}
+
+figcaption {
+  display: block;
+  text-align: center;
+  font-size: .8rem;
+}
+
+.list-title {
+  background-color: #263959;
+  border-bottom-left-radius: 20px;
+  color: #f5f8fe;
+  font-weight: 100;
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  position: relative;
+  padding: 10px 20px;
+  margin: 0;
 }
