added forum list styling

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -102,3 +102,49 @@ figcaption {
       flex-basis: 100%;
   }
 }
+
+.forum-list .forum-listing .forum-details ul.subforums {
+  padding-left: 5px;
+  display: block;
+}
+
+.forum-list .forum-listing .forum-details ul.subforums::before {
+  content: '⌙';
+  margin-right: 5px;
+}
+
+.forum-list .forum-listing .forum-details ul.subforums.subforums li {
+  display: inline;
+}
+
+.forum-list .forum-listing .forum-details ul.subforums.subforums li:not(:last-of-type)::after {
+  content: '\f111';
+  font-family: 'FontAwesome';
+  font-size: 4px;
+  position: relative;
+  top: -3px;
+  left: 2px;
+  padding: 0 3px;
+  color: #878787;
+}
+
+.forum-list .forum-listing .threads-count {
+  flex-basis: 12%;
+  text-align: center;
+}
+
+.forum-list .forum-listing .threads-count .count {
+  font-weight: 100;
+  display: block;
+}
+
+.forum-list .forum-listing .last-thread {
+  flex-basis: 32%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.forum-list .forum-listing .last-thread .avatar {
+  margin-right: 10px;
+}
