--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -70,6 +70,8 @@ figcaption {
   max-width: 100%;
 }
 
+
+/* FORUM LIST */
 .forum-list {
   padding: 0;
   background: white;
@@ -211,6 +213,40 @@ ul .navbar-item:last-child, ul .navbar-mobile-item:last-child {
   font-size: 18px;
 }
 
+@media (min-width: 240px) and (max-width: 720px) {
+  .navbar-item a, .navbar-mobile-item a {
+    padding: 10px 0px;
+  }
+}
+
+.navbar-item a:hover, .navbar-mobile-item a:hover {
+  color: #57AD8D;
+}
+
+.navbar-item a:active, .navbar-mobile-item a:active {
+  color: #57AD8D;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .navbar-item, .navbar-mobile-item {
+    display: block;
+    border: none;
+    margin: 20px 0;
+  }
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .navbar {
+    display: none;
+    position: absolute;
+    z-index: 10;
+    padding: 10px 10px 10px;
+    background: #263959;
+    width: 100%;
+    left: 0;
+    top: 60px;
+  }
+}
 
 #app {
   background: #F5F8FE;
