--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -671,6 +671,62 @@ textarea.form-input {
   }
 }
 
+input[type="submit"],
+button {
+  -webkit-appearance: none;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+button {
+  -webkit-appearance: none;
+}
+
+button a {
+  color: white;
+}
+
+.form-2cols {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-2cols .form-group {
+  flex-basis: 47%;
+}
+
+.form-2cols .form-group:nth-child(odd) {
+  margin-right: 10px;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .form-2cols .form-group {
+    flex-basis: 100%;
+    margin-right: 0;
+  }
+}
+
+button {
+  border: none;
+  background: transparent;
+  appearance: none;
+}
+
+.btn, .btn-blue, .btn-blue-outlined, .btn-brown, .btn-brown-outlined, .btn-green, .btn-green-outlined, .btn-red, .btn-red-outlined, .btn-ghost {
+  padding: 15px 30px;
+  border-radius: 5px;
+  border: none;
+  display: inline-block;
+  outline: 0;
+  transition: all 0.4s ease;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .btn, .btn-blue, .btn-blue-outlined, .btn-brown, .btn-brown-outlined, .btn-green, .btn-green-outlined, .btn-red, .btn-red-outlined, .btn-ghost {
+    padding: 10px 20px;
+  }
+}
+
 #app {
   background: #F5F8FE;
   min-height: 100vh;
