--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1020,6 +1020,57 @@ button {
   margin-bottom: 10px;
 }
 
+.form-actions > *:not(:last-child), .btn-group > *:not(:last-child) {
+  margin-right: 10px;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .form-actions, .btn-group {
+    flex-wrap: wrap;
+  }
+
+  .form-actions > *:not(.btn-ghost), .btn-group > *:not(.btn-ghost) {
+    flex: 1 1;
+    margin-bottom: 5px;
+  }
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.alert {
+  width: 100%;
+  padding: 10px 20px;
+  color: white;
+  opacity: 0.8;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 0.9rem;
+  margin-bottom: 5px;
+}
+
+.alert-error {
+  background: #C82543;
+}
+
+.alert-success {
+  background: #57AD8D;
+}
+
+.alert-info {
+  background: #51617a;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .alert {
+    padding: 10px;
+  }
+}
+
 #app {
   background: #F5F8FE;
   min-height: 100vh;
