--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1665,6 +1665,61 @@ figure {
   }
 }
 
+.col-5 {
+  flex-basis: 18%;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .col-5 {
+    flex-basis: 46%;
+  }
+}
+
+.col-7 {
+  flex-basis: 68%;
+}
+
+@media (min-width: 600px) and (max-width: 1023px) {
+  .col-7 {
+    flex-basis: 96%;
+    margin: 4% 2%
+  }
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .col-7 {
+    flex-basis: 96%;
+    margin: 4% 4%
+  }
+}
+
+.container {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+@media (min-width: 240px) and (max-width: 720px) {
+  .container {
+    width: 96%;
+  }
+}
+
+.col-full {
+  flex-basis: 98%;
+  margin: 0 1%;
+}
+
+@media (max-width: 820px) {
+  .col-full {
+    flex-basis: 98%;
+    margin: 0 1%;
+  }
+}
+
 #app {
   background: #F5F8FE;
   min-height: 100vh;
