added thread styles

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -182,7 +182,45 @@ li:not(:last-of-type)::after {
 }
 
 
-/* Navbar */
+/* THREADS */
+.thread-list {
+  padding: 0;
+  background-color: white;
+}
+
+.thread-list .thread {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 0 5px 20px;
+  min-height: 45px;
+}
+
+.thread-list .thread:nth-child(odd) {
+  background: rgba(73, 89, 96, 0.06);
+  border-bottom-left-radius: 20px;
+}
+
+.thread-list .thread:last-child {
+  border-bottom-left-radius: 0;
+}
+
+.thread-list .thread .replies-count {
+  flex-basis: 35%;
+}
+
+.thread-list .thread .activity {
+  flex-basis: 35%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.thread-list .thread .activity .avatar-medium {
+  margin-right: 10px;
+}
+
+/* NAVBAR */
 .navbar {
   width: 100%;
   display: flex;
@@ -1822,6 +1860,22 @@ section {
 .btn-green-outlined:disabled, .btn-red:disabled, .btn-red-outlined:disabled,
 .btn-ghost:disabled, .btn-disabled, a > img:hover {
   opacity: 0.8;
+}
+
+a > img {
+  transition: all .6s ease;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #F7F9FE, #D1D3D7, #F7F9FE);
+  margin-bottom: 20px;
+}
+
+.fa-btn {
+  padding-right: 3px;
 }
 
 #app {
