--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -473,6 +473,49 @@ li:not(:last-of-type)::after {
   position: relative;
 }
 
+.post-content blockquote.big::before {
+  position: absolute;
+  top: -25px;
+  left: -25px;
+  font-size: 42px;
+  font-family: FontAwesome;
+  content: "\f10e";
+  color: #263959;
+}
+
+@media (max-width: 820px) {
+  .post-content blockquote.big::before {
+    top: -15px;
+    left: -18px;
+    font-size: 32px;
+  }
+}
+
+.post-content blockquote.big .quote {
+  padding-left: 20px;
+  padding-right: 15px;
+  flex-basis: 95%;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 17px;
+}
+
+.post-content blockquote.big .author {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+}
+
+.post-content blockquote.big .author img {
+  flex: 1;
+  flex-basis: 100%;
+  margin-top: 10px;
+  width: 80px;
+  height: 80px;
+}
+
 /* NAVBAR */
 .navbar {
   width: 100%;
