--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -483,6 +483,16 @@ li:not(:last-of-type)::after {
   color: #263959;
 }
 
+.post-content blockquote.small {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  border: 2px solid rgba(152, 152, 152, 0.15);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+
 @media (max-width: 820px) {
   .post-content blockquote.big::before {
     top: -15px;
@@ -514,6 +524,65 @@ li:not(:last-of-type)::after {
   margin-top: 10px;
   width: 80px;
   height: 80px;
+}
+
+.post-content blockquote.small {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  border: 2px solid rgba(152, 152, 152, 0.15);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.post-content blockquote.small::before {
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  font-size: 42px;
+  font-family: FontAwesome;
+  content: "\f10e";
+  color: #263959;
+}
+
+@media (max-width: 820px) {
+  .post-content blockquote.small::before {
+      top: -18px;
+      left: -15px;
+      font-size: 32px;
+  }
+}
+
+.post-content blockquote.small .author {
+  display: flex;
+  flex-basis: 100%;
+  padding: 3px 10px 3px 28px;
+  background-color: rgba(152, 152, 152, 0.15);
+  justify-content: center;
+  align-items: center;
+}
+
+.post-content blockquote.small .author .time {
+  margin-left: 10px;
+}
+
+.post-content blockquote.small .author .fa {
+  margin-left: auto;
+  font-size: 20px;
+}
+
+.post-content blockquote.small .author .fa:hover {
+  cursor: pointer;
+}
+
+.post-content blockquote.small .quote {
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: column;
+  padding: 10px;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 17px;
 }
 
 /* NAVBAR */
