--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -585,6 +585,48 @@ li:not(:last-of-type)::after {
   font-size: 17px;
 }
 
+.post-content blockquote.simple {
+  position: relative;
+  padding: 0px 10px 0px 20px;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 17px;
+  letter-spacing: .15px;
+}
+
+.post-content blockquote.simple::before {
+  position: absolute;
+  top: -25px;
+  left: -25px;
+  font-size: 42px;
+  font-family: FontAwesome;
+  content: "\f10e";
+  color: #263959;
+}
+
+@media (max-width: 820px) {
+  .post-content blockquote.simple::before {
+      top: -15px;
+      left: -18px;
+      font-size: 32px;
+  }
+}
+
+.post-content blockquote.simple .author {
+  display: block;
+  margin-top: 10px;
+  font-weight: normal;
+}
+
+.post-content blockquote.simple .author .time {
+  margin-left: 10px;
+}
+
+.post-listing-editor {
+  flex: 1 1 83%;
+}
+
+
 /* NAVBAR */
 .navbar {
   width: 100%;
